--- a/professioncraft/professioncraft/App.xaml
+++ b/professioncraft/professioncraft/App.xaml
@@ -20,8 +20,48 @@
           </utum:MaterialToolkitTheme.FontOverrideDictionary> -->
         </utum:MaterialToolkitTheme>
       </ResourceDictionary.MergedDictionaries>
+      <!-- App.xaml 或全局资源字典 -->
+
+    <SolidColorBrush x:Key="PrimaryColorBrush" Color="{ThemeResource PrimaryColor}" />
+    <SolidColorBrush x:Key="SecondaryColorBrush" Color="{ThemeResource SecondaryColor}" />
+    <SolidColorBrush x:Key="AccentColorBrush" Color="{ThemeResource AccentColor}" />
       <utu:ExtendedSplashScreen x:Name="Splash"
                           Platforms="Android,iOS,desktop" />
+      <UserControl x:Class="SplashScreenApp.Shell"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:SplashScreenApp"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:utu="using:Uno.Toolkit.UI"
+             mc:Ignorable="d">
+
+    <utu:ExtendedSplashScreen x:Name="Splash"
+                              HorizontalAlignment="Stretch"
+                              VerticalAlignment="Stretch"
+                              HorizontalContentAlignment="Stretch"
+                              VerticalContentAlignment="Stretch">
+        <utu:ExtendedSplashScreen.LoadingContent>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <ProgressRing IsActive="True"
+                              Grid.Row="1"
+                              VerticalAlignment="Center"
+                              HorizontalAlignment="Center"
+                              Height="100"
+                              Width="100"
+                              foreground="{StaticResource PrimaryColorBrush}" />
+            </Grid>
+        </utu:ExtendedSplashScreen.LoadingContent>
+        <utu:ExtendedSplashScreen.Content>
+            <Frame x:Name="ShellFrame" />
+        </utu:ExtendedSplashScreen.Content>
+    </utu:ExtendedSplashScreen>
+</UserControl>
 
 
       <!-- Add resources here -->
